Feat: fully implement gateway service
