# docs/swagger.json
@@ -109,7 +109,7 @@
                 }
             }
         },
-        "/subscriptions": {
+        "/api/subscriptions": {
             "get": {
                 "description": "Get all repository subscriptions",
                 "produces": [
@@ -199,7 +199,7 @@
                 }
             }
         },
-        "/subscriptions/info": {
+        "/api/subscriptions/info": {
             "get": {
                 "description": "Get GitHub information for every subscribed repository",
                 "produces": [
@@ -235,7 +235,7 @@
                 }
             }
         },
-        "/subscriptions/{owner}/{repo}": {
+        "/api/subscriptions/{owner}/{repo}": {
             "delete": {
                 "description": "Delete an existing repository subscription",
                 "produces": [
